--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "aemsync",
-	"version": "0.1.2",
+	"version": "0.2",
 	"description": "Adobe AEM Synchronization Tool",
 	"author": "Michal Kochel <gavoja@gmail.com>",
 	"keywords": [
@@ -19,10 +19,11 @@
 	},
 	"main": "aemsync.js",
 	"dependencies": {
-		"adm-zip": ">=0.4.4",
+		"archiver": ">=0.12.0",
 		"form-data": ">=0.1.4",
 		"minimist": ">=0.2.0",
-		"node-watch": ">=0.3.4"
+		"node-watch": ">=0.3.4",
+		"graceful-fs": ">=3.0.4"
   	},
 	"bin": {
     	"aemsync": "./bin/aemsync"
