--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "aemsync",
-	"version": "0.5.3",
+	"version": "0.6.0",
 	"description": "Adobe AEM Synchronization Tool",
 	"author": "Michal Kochel <gavoja@gmail.com>",
 	"keywords": [
@@ -22,7 +22,7 @@
 		"archiver": ">=0.12.0",
 		"form-data": ">=0.1.4",
 		"minimist": ">=0.2.0",
-		"chokidar": ">=0.12.4",
+		"chokidar": ">=1.0.0-rc3",
 		"graceful-fs": ">=3.0.4",
 		"colors": ">=1.0.3"
   	},
