--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
 	"description": "Adobe AEM Synchronization Tool",
 	"author": "Michal Kochel <gavoja@gmail.com>",
 	"keywords": [
-		"AEM",
-		"CQ",
-		"Sling",
-		"Synchronization"
-	],
+    "AEM",
+    "CQ",
+    "Sling",
+    "Synchronization"
+  ],
 	"homepage": "https://github.com/gavoja/aemsync",
 	"bugs": {
 		"url": "https://github.com/gavoja/aemsync/issues"
@@ -19,15 +19,15 @@
 	},
 	"main": "aemsync.js",
 	"dependencies": {
-		"archiver": ">=0.12.0",
-		"form-data": ">=0.1.4",
-		"minimist": ">=0.2.0",
-		"chokidar": ">=1.0.0-rc3",
-		"graceful-fs": ">=3.0.4",
-		"colors": ">=1.0.3"
-  	},
+		"archiver": "~0.12.0",
+		"form-data": "~0.1.4",
+		"minimist": "~0.2.0",
+		"graceful-fs": "~3.0.4",
+		"colors": "~1.0.3",
+		"chokidar": "~1.0.0-rc3"
+	},
 	"bin": {
-    	"aemsync": "./bin/aemsync"
- 	},
+		"aemsync": "./bin/aemsync"
+	},
 	"license": "WTFPL 2"
 }
