--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "aemsync",
-	"version": "0.7.0",
+	"version": "0.7.1",
 	"description": "Adobe AEM Synchronization Tool",
 	"author": "Michal Kochel <gavoja@gmail.com>",
 	"keywords": [
@@ -24,7 +24,7 @@
 		"minimist": "~0.2.0",
 		"graceful-fs": "~3.0.4",
 		"colors": "~1.0.3",
-		"chokidar": "~1.0.0-rc3"
+		"chokidar": "~1.0.3"
 	},
 	"bin": {
 		"aemsync": "./bin/aemsync"
