--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aemsync",
-  "version": "1.1.1",
+  "version": "2.0.0",
   "description": "Adobe AEM Synchronization Tool",
   "author": "Michal Kochel <gavoja@gmail.com>",
   "keywords": [
@@ -19,16 +19,17 @@
   },
   "main": "index.js",
   "dependencies": {
-    "anymatch": "^1.3.0",
     "archiver": "^0.21.0",
-    "chalk": "^1.1.1",
+    "chalk": "^1.1.3",
     "form-data": "^0.2.0",
-    "graceful-fs": "^4.1.3",
+    "graceful-fs": "^4.1.11",
+    "micromatch": "^3.0.3",
     "minimist": "^1.2.0",
-    "simple-watcher": "^1.0.1"
+    "simple-watcher": "^3.0.0"
   },
   "bin": {
     "aemsync": "./bin/aemsync"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "false": {}
 }
