--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aemsync",
-  "version": "4.0.0",
+  "version": "4.0.1",
   "description": "The code and content synchronization for Sling / AEM (Adobe Experience Manager).",
   "author": "Michal Kochel <gavoja@gmail.com>",
   "keywords": [
@@ -23,16 +23,16 @@
     "triala": "^0.3.0"
   },
   "dependencies": {
-    "adm-zip": "^0.4.13",
-    "form-data": "^2.3.3",
+    "adm-zip": "^0.4.14",
+    "form-data": "^3.0.0",
     "globrex": "^0.1.2",
-    "minimist": "^1.2.0",
-    "node-fetch": "^2.4.1",
-    "simple-watcher": "^4.0.0",
+    "minimist": "^1.2.5",
+    "node-fetch": "^2.6.0",
+    "simple-watcher": "^4.0.1",
     "xml-to-json-stream": "^1.1.0"
   },
   "scripts": {
-    "test": "node test.js -v"
+    "test": "node test/test.js -v"
   },
   "bin": {
     "aemsync": "./bin/aemsync"
