--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "4.0.3",
   "description": "The code and content synchronization for Sling / AEM (Adobe Experience Manager).",
   "author": "Michal Kochel <gavoja@gmail.com>",
+  "type": "module",
   "keywords": [
     "Adobe",
     "AEM",
@@ -20,16 +21,17 @@
   },
   "main": "index.js",
   "devDependencies": {
-    "triala": "^0.3.0"
+    "standard": "16.0.3",
+    "triala": "0.4.0"
   },
   "dependencies": {
-    "adm-zip": "^0.5.4",
-    "form-data": "^4.0.0",
-    "globrex": "^0.1.2",
-    "minimist": "^1.2.5",
-    "node-fetch": "^2.6.1",
-    "simple-watcher": "^4.0.2",
-    "xml-to-json-stream": "^1.1.0"
+    "adm-zip": "0.5.5",
+    "form-data": "4.0.0",
+    "globrex": "0.1.2",
+    "minimist": "1.2.5",
+    "node-fetch": "2.6.1",
+    "simple-watcher": "4.0.2",
+    "xml-to-json-stream": "1.1.0"
   },
   "scripts": {
     "test": "node test/test.js -v"
