Added workflow for automatic releases.

--- a/.release-it.json
+++ b/.release-it.json
@@ -12,5 +12,9 @@
   },
   "npm": {
     "publish": true
+  },
+  "hooks": {
+    "before:init": ["npm run lint", "npm test"],
+    "after:release": "echo Successfully released ${name} v${version} to NPM and GitHub."
   }
 }
